--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,5 @@
 {
-    "name": "amzn/paapi5-php-sdk",
-    "version": "1.0.0",
+    "name": "ten7/amazon-paapi5-php-sdk",
     "description": "ProductAdvertisingAPI 5.0 PHP SDK",
     "keywords": [
         "amazon",
